--- a/index.html
+++ b/index.html
@@ -275,6 +275,15 @@
                 <h3>Phone</h3>
                 <p>+91 6200023456</p>
             </div>
+
+            <div class="contact-container-2">
+
+                <div class="instra"><a href="https://www.instagram.com/aryan_sh.04?igsh=NWdlOWJ2MWs0N3M="><img
+                            src="icons\instagram.png" alt=""></a></div>
+                <div class="linkedin"><a href="https://www.linkedin.com/in/aryan-kumar-prajapati-172a06295/"><img
+                            src="icons\linkedin.png" alt=""></a></div>
+
+            </div>
             <div class="contact-card">
                 <i class="fas fa-envelope contact-icon"></i>
                 <h3>Email</h3>
@@ -282,12 +291,7 @@
             </div>
         </div>
 
-        <div class="contact-container-2">
-            
-                <div class="instra"><a href="https://www.instagram.com/aryan_sh.04?igsh=NWdlOWJ2MWs0N3M="><img src="icons\instagram.png" alt=""></a></div>
-                <div class="linkedin"><a href="https://www.linkedin.com/in/aryan-kumar-prajapati-172a06295/"><img src="icons\linkedin.png" alt=""></a></div>
-            
-        </div>
+
     </section>
     <script src="script.js"></script>
 </body>
