--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <img src="image\password-manager.png" alt="Password Manager">
                 <h3>Password Manager</h3>
                 <p>A secure web application to generate, store, and manage passwords with encryption.</p>
-                <a href="https://github.com/Aryan2006-code/Password-Manager">github-link</a>
+                <a href="https://password-manager-iyp2.onrender.com/">link</a>
             </div>
             <div class="project-card">
                 <img src="image\portfolio.png" alt="Portfolio Website">
