--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
                 <img src="image\password-manager.png" alt="Password Manager">
                 <h3>Password Manager</h3>
                 <p>A secure web application to generate, store, and manage passwords with encryption.</p>
-                <a href="https://password-manager-iyp2.onrender.com/">link</a>
+                <a href="https://password-manager-iyp2.onrender.com/" target="_blank">link</a>
             </div>
             <div class="project-card">
                 <img src="image\portfolio.png" alt="Portfolio Website">
                 <h3>Portfolio Website</h3>
                 <p>A personal portfolio website to showcase projects and skills, built with HTML, CSS.
                 </p>
-                <a href="https://github.com/Aryan2006-code/Portfolio">github-link</a>
+                <a href="https://github.com/Aryan2006-code/Portfolio" target="_blank">github-link</a>
             </div>
             <div class="project-card">
                 <img src="image\Tic-Tac_toe.png" alt="Blog Website">
@@ -125,7 +125,7 @@
                 <p>Interactive Tic Tac Toe game using HTML, CSS, JavaScript with responsive design and two-player
                     functionality.
                 </p>
-                <a href="https://github.com/Aryan2006-code/Tic-Tac-Toe-Game">github-link</a>
+                <a href="https://github.com/Aryan2006-code/Tic-Tac-Toe-Game" target="_blank">github-link</a>
             </div>
             <div class="project-card">
                 <img src="image\Rpc.png" alt="Blog Website">
@@ -133,7 +133,7 @@
                 <p>Fun Rock Paper Scissors game using HTML, CSS, JavaScript featuring dynamic gameplay and instant
                     result display.
                 </p>
-                <a href="https://github.com/Aryan2006-code/Rock-Paper-Scissors">github-link</a>
+                <a href="https://github.com/Aryan2006-code/Rock-Paper-Scissors" target="_blank">github-link</a>
             </div>
         </div>
         <div class="project-container-2">
@@ -141,14 +141,14 @@
                 <img src="image\tm.png" alt="Password Manager">
                 <h3>Fun-Time-Machine</h3>
                 <p>A fun Time Machine web app built with HTML, CSS, and JavaScript, showcasing interactive design.</p>
-                <a href="https://github.com/Aryan2006-code/Fun-Time-Machine">github-link</a>
+                <a href="https://github.com/Aryan2006-code/Fun-Time-Machine" target="_blank">github-link</a>
             </div>
             <div class="project-card">
                 <img src="image\tqg.png" alt="Portfolio Website">
                 <h3>Troll-Quiz-Game(Console)</h3>
                 <p>A console-based Troll Quiz Game in C++ featuring humorous questions, file handling, and dynamic score
                     system.</p>
-                <a href="https://github.com/Aryan2006-code/Troll-Quiz-Game">github-link</a>
+                <a href="https://github.com/Aryan2006-code/Troll-Quiz-Game" target="_blank">github-link</a>
             </div>
         </div>
     </section>
