--- a/index.html
+++ b/index.html
@@ -117,34 +117,34 @@
                 <h3>Portfolio Website</h3>
                 <p>A personal portfolio website to showcase projects and skills, built with HTML, CSS.
                 </p>
-                <a href="https://github.com/Aryan2006-code/Portfolio" target="_blank">github-link</a>
+                <a href="https://aryan2006-code.github.io/Portfolio-try-/" target="_blank">github-link</a>
             </div>
             <div class="project-card">
-                <img src="image\Tic-Tac_toe.png" alt="Blog Website">
+                <img src="image\Tic-Tac_toe.png" alt="tic tac toe">
                 <h3>Tic Tac Toe Game</h3>
                 <p>Interactive Tic Tac Toe game using HTML, CSS, JavaScript with responsive design and two-player
                     functionality.
                 </p>
-                <a href="https://github.com/Aryan2006-code/Tic-Tac-Toe-Game" target="_blank">github-link</a>
+                <a href="https://aryan2006-code.github.io/Tic-Tac-Toe-Game/" target="_blank">github-link</a>
             </div>
             <div class="project-card">
-                <img src="image\Rpc.png" alt="Blog Website">
+                <img src="image\Rpc.png" alt="rock paper scissor">
                 <h3>Rock Paper Scissor</h3>
                 <p>Fun Rock Paper Scissors game using HTML, CSS, JavaScript featuring dynamic gameplay and instant
                     result display.
                 </p>
-                <a href="https://github.com/Aryan2006-code/Rock-Paper-Scissors" target="_blank">github-link</a>
+                <a href="https://aryan2006-code.github.io/Rock-Paper-Scissors/" target="_blank">github-link</a>
             </div>
         </div>
         <div class="project-container-2">
             <div class="project-card">
-                <img src="image\tm.png" alt="Password Manager">
+                <img src="image\tm.png" alt="time machine">
                 <h3>Fun-Time-Machine</h3>
                 <p>A fun Time Machine web app built with HTML, CSS, and JavaScript, showcasing interactive design.</p>
-                <a href="https://github.com/Aryan2006-code/Fun-Time-Machine" target="_blank">github-link</a>
+                <a href="https://aryan2006-code.github.io/Fun-Time-Machine/" target="_blank">github-link</a>
             </div>
             <div class="project-card">
-                <img src="image\tqg.png" alt="Portfolio Website">
+                <img src="image\tqg.png" alt="consile based">
                 <h3>Troll-Quiz-Game(Console)</h3>
                 <p>A console-based Troll Quiz Game in C++ featuring humorous questions, file handling, and dynamic score
                     system.</p>
