--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
                 <img src="image\password-manager.png" alt="Password Manager">
                 <h3>Password Manager</h3>
                 <p>A secure web application to generate, store, and manage passwords with encryption.</p>
-                <a href="https://password-manager-iyp2.onrender.com/" target="_blank">link</a>
+                <a href="https://password-manager-iyp2.onrender.com/" target="_blank">Live Demo</a>
             </div>
             <div class="project-card">
                 <img src="image\portfolio.png" alt="Portfolio Website">
                 <h3>Portfolio Website</h3>
                 <p>A personal portfolio website to showcase projects and skills, built with HTML, CSS.
                 </p>
-                <a href="https://aryan2006-code.github.io/Portfolio-try-/" target="_blank">github-link</a>
+                <a href="https://aryan2006-code.github.io/Portfolio-try-/" target="_blank">Live Demo</a>
             </div>
             <div class="project-card">
                 <img src="image\Tic-Tac_toe.png" alt="tic tac toe">
@@ -125,15 +125,15 @@
                 <p>Interactive Tic Tac Toe game using HTML, CSS, JavaScript with responsive design and two-player
                     functionality.
                 </p>
-                <a href="https://aryan2006-code.github.io/Tic-Tac-Toe-Game/" target="_blank">github-link</a>
+                <a href="https://aryan2006-code.github.io/Tic-Tac-Toe-Game/" target="_blank">Live Demo</a>
             </div>
             <div class="project-card">
-                <img src="image\Rpc.png" alt="rock paper scissor">
+                <img src="image\rpc.png" alt="rock paper scissor">
                 <h3>Rock Paper Scissor</h3>
                 <p>Fun Rock Paper Scissors game using HTML, CSS, JavaScript featuring dynamic gameplay and instant
                     result display.
                 </p>
-                <a href="https://aryan2006-code.github.io/Rock-Paper-Scissors/" target="_blank">github-link</a>
+                <a href="https://aryan2006-code.github.io/Rock-Paper-Scissors/" target="_blank">Live Demo</a>
             </div>
         </div>
         <div class="project-container-2">
@@ -141,14 +141,14 @@
                 <img src="image\tm.png" alt="time machine">
                 <h3>Fun-Time-Machine</h3>
                 <p>A fun Time Machine web app built with HTML, CSS, and JavaScript, showcasing interactive design.</p>
-                <a href="https://aryan2006-code.github.io/Fun-Time-Machine/" target="_blank">github-link</a>
+                <a href="https://aryan2006-code.github.io/Fun-Time-Machine/" target="_blank">Live Demo</a>
             </div>
             <div class="project-card">
                 <img src="image\tqg.png" alt="consile based">
                 <h3>Troll-Quiz-Game(Console)</h3>
                 <p>A console-based Troll Quiz Game in C++ featuring humorous questions, file handling, and dynamic score
                     system.</p>
-                <a href="https://github.com/Aryan2006-code/Troll-Quiz-Game" target="_blank">github-link</a>
+                <a href="https://github.com/Aryan2006-code/Troll-Quiz-Game" target="_blank">Source Code</a>
             </div>
         </div>
     </section>
